# rclcpp_dlclose_segfault

./: CMakeLists.txt  README.md  run_asan.output.txt  run_asan.sh  run_ubsan.output.txt  run_ubsan.sh  run_valgrind.output.txt  run_valgrind.sh
src/: ros_segfault_min_direct.cc  ros_segfault_min_dlopen.cc  ros_segfault_min_lib.cc  ros_segfault_min_lib.h  ros_segfault_test.py
